<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainActivity.MainActivity">
    <ImageView
        android:src="@drawable/main_screen_image"
        style="@style/StyleImageViewAlpha" />
    <RelativeLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.CardView
            android:id="@+id/cv_1"
            android:onClick="clickListeners"
            style="@style/StyleCardViews">
            <ImageView
                android:id="@+id/iv_1"
                android:scaleType="fitXY"
                android:src="@drawable/peoples"
                style="@style/StyleImageView"/>
            <TextView
                style="@style/StyleTextViewCustom"
                android:id="@+id/tv_1"
                android:text="@string/persons" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cv_2"
            android:onClick="clickListeners"
            style="@style/StyleCardViews"
            android:layout_toEndOf="@id/cv_1">
            <ImageView
                android:id="@+id/iv_2"
                android:scaleType="fitXY"
                android:src="@drawable/cars"
                style="@style/StyleImageView"/>
            <TextView
                android:id="@+id/tv_2"
                android:text="@string/cars"
                style="@style/StyleTextViewCustom" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cv_3"
            android:onClick="clickListeners"
            android:layout_below="@id/cv_1"
            style="@style/StyleCardViews">
            <ImageView
                android:id="@+id/iv_3"
                android:scaleType="fitXY"
                android:src="@drawable/missions"
                style="@style/StyleImageView"/>
            <TextView
                android:id="@+id/tv_3"
                android:text="@string/missions"
                style="@style/StyleTextViewCustom" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/cv_4"
            android:onClick="clickListeners"
            android:layout_below="@id/cv_2"
            android:layout_toEndOf="@id/cv_3"
            style="@style/StyleCardViews">
            <ImageView
                android:id="@+id/iv_4"
                android:scaleType="fitXY"
                android:src="@drawable/secrets"
                style="@style/StyleImageView"/>
            <TextView
                android:id="@+id/tv_4"
                android:text="@string/secrets"
                style="@style/StyleTextViewCustom" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>
</FrameLayout>
